Improve css for positioning of zoom controls and organism view. Included placeholder text for mouse details in case text is needed.

--- a/src/components/two-up-display.sass
+++ b/src/components/two-up-display.sass
@@ -15,6 +15,7 @@
   border: $component-border-width solid white
   border-radius: $component-border-radius
   margin: $double-component-margin
+  overflow: hidden
 
   .header
     height: $two-up-header-height
@@ -45,6 +46,7 @@
   .content
     flex-grow: 1
     overflow: hidden
+    position: relative
 
 .left-abutment
   margin-right: $component-margin
