--- a/src/components/zoom-control.sass
+++ b/src/components/zoom-control.sass
@@ -1,11 +1,11 @@
 @import vars
 
 .zoom-control-container
-  position: relative
-  width: 100%
+  position: absolute
+  width: 100px
+  bottom: 0px
   text-align: center
-  margin-left: auto
-  margin-right: auto
+  font-size: 1.2em
 
 
   .zoom-control
