Adding assay controls

--- a/src/components/spaces/organisms/organisms-container.sass
+++ b/src/components/spaces/organisms/organisms-container.sass
@@ -1,4 +1,7 @@
-.organism-view-container
+.organisms-container
+
+  .cell-zoom-panel .model-wrapper
+    top: -40px
 
   .collect-button-holder
     position: absolute
@@ -7,3 +10,12 @@
   .index,
   .x-close
     color: black
+
+  .organism-controls
+    position: absolute
+    bottom: 0px
+    text-align: center
+    font-size: 1.2em
+    display: flex
+    flex-direction: row
+    width: 100%
