Add instruction authoring for population view
Add instruction authoring for population view using markdown-to-jsx package.  Users can enter markdown formatted instructions in the authoring page which are then displayed in the right panel of the populations view.
[#162054341]

--- a/src/components/two-up-display.sass
+++ b/src/components/two-up-display.sass
@@ -18,7 +18,7 @@
   overflow: hidden
 
   .header
-    height: $two-up-header-height
+    flex: 0 0 $two-up-header-height
     display: flex
     align-items: center
     font-family: $font-stack
@@ -47,6 +47,9 @@
     flex-grow: 1
     overflow: hidden
     position: relative
+
+  .scrollable
+    overflow: auto
 
 .left-abutment
   margin-right: $component-margin
