--- a/src/components/spaces/organisms/organelle-wrapper.sass
+++ b/src/components/spaces/organisms/organelle-wrapper.sass
@@ -5,8 +5,8 @@
   margin-right: auto
 
 
-// .model-wrapper.dropper
-//   cursor: url("../assets/dropper.png") 6 28, auto
+  &.dropper
+    cursor: url("../../../assets/cell-zoom/dropper.png") 6 28, auto
 
 .hover-location
     position: absolute
