--- a/src/components/spaces/populations/populations-container.sass
+++ b/src/components/spaces/populations/populations-container.sass
@@ -1,9 +1,92 @@
+@import "../../vars"
+
 .populations-toolbar
-  position: fixed
+  height: 100px
   display: flex
-  flex-wrap: wrap
-  width: 40%
-  bottom: 6px
+  flex-direction: column
+  justify-content: center
+  width: 100%
+  position: absolute
+  bottom: 0px
+  background-color: $color-dark-gold
+
+.toolbar-row
+  display: flex
+  flex-direction: row
+  width: 100%
+  justify-content: center
+
+  .population-checkbox
+    height: 20px
+    width: 20px
+    background: $color-khaki-yellow-light2
+    color: red
+
+  .population-button
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    height: 50px
+    width: 52px
+    margin: 6px
+    border: none
+    outline: none
+    border-radius: 5px
+    font-size: $font-size-label1
+    font-family: $font-stack
+    color: $color-khaki-yellow-dark5
+    background-color: $color-khaki-yellow-light2
+    cursor: pointer
+
+    &.pause
+      color: $color-white
+      background-color: $color-khaki-yellow-dark4
+
+    &.collect-on
+      color: $color-white
+      background-color: $color-nav-cerulean-dark1
+
+    .icon
+      width: 44px
+      height: 28px
+      fill: $color-khaki-yellow-dark2
+
+      &.pause
+        fill: $color-white
+
+      &.collect-on
+        fill: $color-white
+
+    .label
+      margin: $internal-component-margin
+
+  .population-button:hover
+    background-color: $color-khaki-yellow
+
+  .population-button:active
+    color: $color-white
+    background-color: $color-khaki-yellow-dark4
+
+  .population-button:active .icon
+    fill: $color-white
+
+  .population-button:active .icon.pause
+    fill: $color-khaki-yellow-dark2
+
+  .population-button.pause:hover
+    background-color: $color-khaki-yellow
+
+  .population-button.pause:active
+    color: $color-khaki-yellow-dark5
+    background-color: $color-khaki-yellow-light2
+
+  .population-button:active .icon.collect-off
+    fill: $color-white
+
+  .population-button.collect-off:active
+    color: $color-white
+    background-color: $color-nav-cerulean-dark1
 
   button
     height: 20px
@@ -28,6 +111,120 @@
       input:checked + span
         background-color: #911
         color: #fff
+
+/* The container */
+.check-container
+  display: block
+  position: relative
+  padding-left: 25px
+  cursor: pointer
+  -webkit-user-select: none
+  -moz-user-select: none
+  -ms-user-select: none
+  user-select: none
+  margin-left: 5px
+  margin-right: 5px
+  margin-top: 2px
+  margin-bottom: 2px
+
+/* Hide the browser's default checkbox */
+.check-container input
+  position: absolute
+  opacity: 0
+  cursor: pointer
+  height: 0
+  width: 0
+
+/* Create a custom checkbox */
+.checkmark
+  position: absolute
+  top: 0
+  left: 0
+  height: 20px
+  width: 20px
+  border-radius: 5px
+  background-color: $color-khaki-yellow-light2
+
+/* On mouse-over, add a grey background color */
+.check-container:hover input ~ .checkmark
+  background-color: $color-khaki-yellow
+
+/* checkbox is checked */
+.check-container input:checked ~ .checkmark
+  background-color: $color-khaki-yellow-dark4
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after
+  content: ""
+  position: absolute
+  display: none
+
+/* Show the checkmark when checked */
+.check-container input:checked ~ .checkmark:after
+  display: block
+
+/* Style the checkmark/indicator */
+.check-container .checkmark:after
+  left: 6px
+  top: 2px
+  width: 5px
+  height: 10px
+  border: solid white
+  border-width: 0 3px 3px 0
+  -webkit-transform: rotate(45deg)
+  -ms-transform: rotate(45deg)
+  transform: rotate(45deg)
+
+.label-holder
+  display: flex
+  flex-direction: column
+  justify-content: center
+  align-items: left
+  height: 20px
+
+  .label
+    display: flex
+    align-items: center
+    font-size: $font-size-label1
+    color: $color-khaki-yellow-dark5
+
+.circle
+  height: 8px
+  width: 8px
+  border-radius: 4px
+  margin-left: 4px
+  margin-top: 3px
+
+  &.male
+    background-color: $color-key-red
+
+  &.female
+    background-color: $color-key-yellow
+
+  &.heterozygote
+    background-color: $color-key-blue
+
+.environment-box
+  height: 22px
+  width: 36px
+  border: 1px solid $color-khaki-yellow-dark2
+  color: $color-black
+  background-color: $color-white
+  display: flex
+  justify-content: center
+  align-items: center
+
+  &.dark
+    color: $color-nav-cinder-light2
+    background-color: $color-nav-cinder
+
+  &.neutral
+    color: $color-nav-cinder-dark1
+    background-color: $color-nav-cinder-light1
+
+  &.light
+    color: $color-nav-cinder
+    background-color: $color-nav-cinder-light3
 
 #environment
   overflow: hidden
