--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -215,9 +215,9 @@ $collect-button-icon-height: 45px
 //
 // two-up display
 //
-$two-up-header-height: 50px
+$two-up-header-height: 30px
 $two-up-bgcolor: $color-mouse-brown
-$two-up-header-color: $color-mouse-brown
+$two-up-header-color: $color-white
 $two-up-header-bgcolor: $color-dark-gold
 $two-up-graph-button-icon-color: $color-white
 $two-up-graph-button-icon-height: 18px
