--- a/src/components/charts/line-chart-controls.sass
+++ b/src/components/charts/line-chart-controls.sass
@@ -2,17 +2,17 @@
 
 .line-chart-controls
   position: relative
-  width: 90%
+  width: 88%
   height: 10px
-  margin-left: 5%
-  margin-right: 5%
+  margin-left: 8%
+  margin-right: 4%
   margin-top: 5px
   background-color: $color5-1
 
   .scrubber
     position: absolute
     width: 100%
-    height: 20px
     margin-top: -5px
-    background-color: $color5-6
-    border-radius: $component-border-radius
+
+  .rc-slider-disabled
+    background-color: $color3-1
