Wire up info tool button

--- a/src/components/spaces/populations/populations-container.sass
+++ b/src/components/spaces/populations/populations-container.sass
@@ -43,7 +43,7 @@
       color: $color-white
       background-color: $color-khaki-yellow-dark4
 
-    &.collect-on
+    &.button-active
       color: $color-white
       background-color: $color-nav-cerulean-dark1
 
@@ -55,7 +55,7 @@
       &.pause
         fill: $color-white
 
-      &.collect-on
+      &.button-active
         fill: $color-white
 
     .label
@@ -81,10 +81,10 @@
     color: $color-khaki-yellow-dark5
     background-color: $color-khaki-yellow-light2
 
-  .population-button:active .icon.collect-off
+  .population-button:active .icon.button-inactive
     fill: $color-white
 
-  .population-button.collect-off:active
+  .population-button.button-inactive:active
     color: $color-white
     background-color: $color-nav-cerulean-dark1
 
