Pausing cell during an assay

--- a/src/components/spaces/organisms/manipulation-controls.sass
+++ b/src/components/spaces/organisms/manipulation-controls.sass
@@ -9,5 +9,10 @@
     display: inline-block
     cursor: pointer
 
+    &.disabled
+      pointer-events: none
+      color: lightgray
+
+    &.active,
     &:active
       background-color: gray
