--- a/src/components/two-up-display.sass
+++ b/src/components/two-up-display.sass
@@ -14,7 +14,7 @@
   background-color: $component-bgcolor
   border: $component-border-width solid white
   border-radius: $component-border-radius
-  margin: $double-component-margin
+  margin: $double-two-up-margin
   overflow: hidden
 
   .header
@@ -54,10 +54,10 @@
     flex: 0 0 $two-up-header-height
     background-color: $two-up-header-bgcolor
     border-bottom-left-radius: $component-border-radius
-    border-bottom-right-radius: $component-border-radius     
+    border-bottom-right-radius: $component-border-radius
 
 .left-abutment
-  margin-right: $component-margin
+  margin-right: $two-up-margin
 
 .right-abutment
-  margin-left: $component-margin
+  margin-left: $two-up-margin
