Fix text and colors on title bars
[#162386736]

--- a/src/components/main-content.sass
+++ b/src/components/main-content.sass
@@ -7,3 +7,9 @@
   align-items: center
   color: $main-content-color
   background-color: $main-content-bgcolor
+
+  &.populations
+    background-color: $color-khaki-yellow-dark4
+
+  &.organism
+    background-color: $color-salmon-orange-dark4
