--- a/src/components/two-up-display.sass
+++ b/src/components/two-up-display.sass
@@ -6,7 +6,6 @@
   width: 100%
   height: 100%
   justify-content: center
-  background-color: $two-up-bgcolor
 
 .two-up-panel
   display: flex
@@ -27,6 +26,12 @@
     background-color: $two-up-header-bgcolor
     border-top-left-radius: $component-border-radius
     border-top-right-radius: $component-border-radius
+
+    &.populations
+      background-color: $color-khaki-yellow-dark2
+
+    &.organism
+      background-color: $color-salmon-orange-dark2
 
     .title
       flex-grow: 1
@@ -55,6 +60,12 @@
     background-color: $two-up-header-bgcolor
     border-bottom-left-radius: $component-border-radius
     border-bottom-right-radius: $component-border-radius
+
+    &.populations
+      background-color: $color-khaki-yellow-dark2
+
+    &.organism
+      background-color: $color-salmon-orange-dark2
 
 .left-abutment
   margin-right: $two-up-margin
