Add three-button definitions for 2up; add protein
This

1. Changes the `show[Space]Graph` property in `ui` to be a string
   representing the current space, "instructions", "data" or "information"
2. Makes the 2-up display responsible for showing the three icons, and
   allows them to be disabled
3. Updates the population space to use the new 2-up properties
4. Updates the organism space to use the 2-up properties and show a default
   protein if "information" is selected.

[#162242098]

--- a/src/components/two-up-display.sass
+++ b/src/components/two-up-display.sass
@@ -39,13 +39,37 @@
     .button-holder
       flex-grow: 0
       flex-shrink: 0
-      display: flex;
-      margin: $double-component-margin
+      display: flex
+      align-items: center
+      justify-content: center
+      width: 30px
+      height: 30px
 
-    .button
-      height: $two-up-graph-button-icon-height
-      width: $two-up-graph-button-icon-width
-      fill: $two-up-graph-button-icon-color
+      &:hover:not(.disabled)
+        background-color: $two-up-button-background
+        cursor: pointer
+
+      .button
+        height: $two-up-button-icon-height
+        width: $two-up-button-icon-width
+        fill: $color-khaki-yellow
+
+    &.organism
+      .button-holder
+        &:hover:not(.disabled)
+          background-color: $color-salmon-orange-dark4
+        .button
+          fill: $color-salmon-orange-dark1
+        &.active
+          .button
+            fill: $two-up-button-icon-color-active
+
+      &.disabled
+        .button
+          opacity: 0.25
+      &.active
+        .button
+          fill: $two-up-button-icon-color-active
 
   .content
     flex-grow: 1
