--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -54,6 +54,7 @@ $color-blue: #0000ff
 $color-key-blue: #0099ff
 $color-key-red: #de444b
 $color-key-yellow: #ffff00
+$color-nav-reddish-btn: #c3550f
 $color-nav-cinder-dark3: #2c3840
 $color-nav-cinder-dark2: #434e56
 $color-nav-cinder-dark1: #5d6e77
@@ -101,6 +102,7 @@ $color-salmon-orange-dark2: #EB813E
 $color-salmon-orange-dark3: #DF7D3F
 $color-salmon-orange-dark4: #D45200
 $color-salmon-orange-dark5: #973B00
+$color-simdata-amber-dark1: #d49600
 $color-dark-gold: #EBB936
 $color-light-gold: #D8E0B0
 
@@ -218,9 +220,10 @@ $two-up-header-height: 30px
 $two-up-bgcolor: $color-khaki-yellow-dark4
 $two-up-header-color: $color-white
 $two-up-header-bgcolor: $color-dark-gold
-$two-up-graph-button-icon-color: $color-white
-$two-up-graph-button-icon-height: 18px
-$two-up-graph-button-icon-width: $two-up-graph-button-icon-height
+$two-up-button-background: $color-simdata-amber-dark1
+$two-up-button-icon-color-active: $color-white
+$two-up-button-icon-height: 18px
+$two-up-button-icon-width: $two-up-button-icon-height
 $two-up-margin: 5px
 $double-two-up-margin: $two-up-margin * 2
 
