Allow multiple assays to show at same time
[#162487966]

--- a/src/components/charts/chart.sass
+++ b/src/components/charts/chart.sass
@@ -1,11 +1,12 @@
 @import ../vars
 
 .chart-container
-  max-height: 400px
+  max-height: 360px
   background-color: white
+  margin: $component-margin
 
   .chart-display
-    max-height: 400px
+    max-height: 360px
 
     .line-chart-container
       position: relative
