Cleaning up the assay/organism view
- "Assay" button now reads "Measure"
- Hovered organelle is moved to the top right corner for smaller screens
- Organism label is hidden

--- a/src/components/spaces/organisms/organelle-wrapper.sass
+++ b/src/components/spaces/organisms/organelle-wrapper.sass
@@ -10,11 +10,11 @@
 
 .hover-location
     position: absolute
-    bottom: 5px
+    top: 45px
     right: 5px
     min-width: 94px
     height: 18px
-    background: #FFFFFF88
+    background: #FFFFFFAA
     border: 1px solid #444
     padding: 2px
     text-align: center
