Update UI based on UI spec
-add SVG definitions for icons
-add x close icon for collect button
-update collect buttons x close and index positions
-update collect buttons x close and index colors
-add padding in right panel when displaying instructions
-add correct panel spacing in 4-up display
-add correct hover effect on collect button x close and collect circle button
-add correct collect button state when placing an organism in the organism view
-update collect button x close background shape when hovering over button
-unify transition times

[#162495890]

--- a/src/components/collect-button.sass
+++ b/src/components/collect-button.sass
@@ -14,7 +14,8 @@
     position: absolute
     display: flex
     justify-content: center
-    top: 1px
+    align-items: center
+    top: 0px
     left: 80px
     padding: 2px
     color: $color-white
@@ -22,14 +23,22 @@
     font-weight: bold
     width: 20px
     height: 20px
-    border-radius: $collect-button-radius
+    border-top-left-radius: $collect-button-radius
+    border-top-right-radius: $collect-button-radius
+    transform: rotate(45deg)
     transition-property: background-color
     transition-duration: $fade-time
 
+    .icon
+      transform: rotate(-45deg)
+      width: 11px
+      height: 11px
+      fill: $color-white
+
   .index
     position: absolute
-    top: 0px
-    left: 0px
+    top: 3px
+    left: 3px
     padding: 1px
     font-family: $font-stack
     font-size: $font-size-header
@@ -46,6 +55,7 @@
     width: $collect-button-outline-width
     height: $collect-button-outline-height
     border-radius: $collect-button-radius
+    transition-property: background-color
     transition-duration: $fade-time
 
   .collect-button
@@ -88,26 +98,22 @@
       font-size: $font-size-label2
       color: $color-nav-cerulean-dark2
 
-.collect-button-holder:hover:not(.uncollected)
+.x-close:hover
+  background-color: $color-nav-cerulean-dark1
   cursor: pointer
 
-.x-close:hover
+.x-close:hover + .collect-button-outline
   background-color: $color-nav-cerulean-dark1
 
 // styles below only for when we are in the backpack
 .left-nav-panel
-  .collect-button-holder:hover:not(.uncollected) .collect-button-outline
-    background-color: $color-nav-cerulean-dark1
-
-  .collect-button-holder:hover .x-close
-    background-color: $color-nav-cerulean-dark1
-
   .collect-button-holder:not(.uncollected)
     .collect-button
-      &:hover
-        border-color: $color-nav-cerulean-dark2
-        cursor: pointer
-
       &.deselected
         opacity: 0.5
+      &.selected
+        background-color: $color-nav-cerulean-light1
 
+  .collect-button-outline:hover:not(.uncollected)
+    background-color: $color-white
+    cursor: pointer
