--- a/src/components/spaces/populations/populations-container.sass
+++ b/src/components/spaces/populations/populations-container.sass
@@ -37,6 +37,7 @@
     color: $color-khaki-yellow-dark5
     background-color: $color-khaki-yellow-light2
     cursor: pointer
+    transition-duration: $fade-time
 
     &.sticky
       color: $color-white
