--- a/src/components/two-up-display.sass
+++ b/src/components/two-up-display.sass
@@ -104,7 +104,13 @@
       background-color: $color-salmon-orange-dark2
 
 .left-abutment
-  margin-right: $two-up-margin
+  margin-left: $two-up-margin
 
 .right-abutment
-  margin-left: $two-up-margin
+  margin-right: $two-up-margin
+
+.top-abutment
+  margin-top: $two-up-margin
+
+.bottom-abutment
+  margin-bottom: $two-up-margin
