--- a/src/components/instructions.sass
+++ b/src/components/instructions.sass
@@ -2,6 +2,6 @@
 
 .authored-markdown
   font-family: $font-stack
-  padding: $component-padding
+  padding: $double-component-padding
   text-align: left
 
