--- a/src/components/spaces/organisms/organisms-container.sass
+++ b/src/components/spaces/organisms/organisms-container.sass
@@ -1,3 +1,5 @@
+@import "../../vars"
+
 .organisms-container
 
   .cell-zoom-panel .model-wrapper
@@ -9,7 +11,10 @@
 
   .index,
   .x-close
-    color: black
+    color: $color-nav-cinder-dark1
+
+    .icon
+      fill: $color-nav-cinder-dark1
 
   .organism-controls
     position: absolute
