Update organism control styling
[#162326777]
[#162321695]

--- a/src/components/spaces/organisms/manipulation-controls.sass
+++ b/src/components/spaces/organisms/manipulation-controls.sass
@@ -1,7 +1,8 @@
 .manipulation-controls
+  display: flex
   flex-grow: 1
   justify-content: center
-  font-size: 17px
+  align-items: center
 
   .button
     border: 1px solid black
