--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -37,6 +37,7 @@ $font-size-header: 14px
 $font-size-normal: 12px
 $font-size-label1: 11px
 $font-size-label2: 10px
+$font-size-label3: 9px
 
 //
 // animations
