Hacky setting of mouse type names
This is only necessary because we are using the built-in inspector,
this will change when we use the right panel.

[#162621888]

--- a/src/components/spaces/populations/populations-container.sass
+++ b/src/components/spaces/populations/populations-container.sass
@@ -237,5 +237,9 @@
     color: $color-nav-cinder
     background-color: $color-nav-cinder-light3
 
-#environment
-  overflow: hidden
+.populations-environment
+
+  .bubble .content .details .agent-property-value
+    clear: left
+    float: left
+    padding: 3px 0 10px 10px
