--- a/src/components/authoring.sass
+++ b/src/components/authoring.sass
@@ -111,3 +111,103 @@ form.rjsf
   .help-block
     margin: 0
     color: #9543b6
+
+  .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12
+    float: left
+
+  .col-xs-9
+    width: 75%
+    padding-right: 15px
+
+  .col-xs-3
+    width: 25%
+
+  .field-array
+    .form-group.field-object
+      border-bottom: 1px solid #EEE
+
+    .btn
+      padding: 4px 12px 8px 12px
+      max-width: 35px
+
+    .btn-group
+      position: relative
+      display: inline-block
+      vertical-align: middle
+
+    .btn-group>.btn:first-child:not(:last-child):not(.dropdown-toggle)
+      border-bottom-right-radius: 0
+      border-top-right-radius: 0
+
+    .btn-group>.btn:not(:first-child):not(:last-child):not(.dropdown-toggle)
+      border-radius: 0
+
+    .btn-group>.btn:first-child
+      margin-left: 0
+
+    .btn-group>.btn:last-child:not(:first-child)
+      border-bottom-left-radius: 0
+      border-top-left-radius: 0
+
+    .btn-group>.btn
+      position: relative
+      float: left
+
+    .btn-group .btn+.btn
+      margin-left: -1px
+
+    .btn-danger
+      background-image: -webkit-linear-gradient(#e12b31, #c71c22 60%, #b5191f)
+      background-image: -o-linear-gradient(#e12b31, #c71c22 60%, #b5191f)
+      background-image: -webkit-gradient(linear, left top, left bottom, from(#e12b31), color-stop(60%, #c71c22), to(#b5191f))
+      background-image: linear-gradient(#e12b31, #c71c22 60%, #b5191f)
+      background-repeat: no-repeat
+      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe12b31', endColorstr='#ffb5191f', GradientType=0)
+      -webkit-filter: none
+      filter: none
+      border-bottom: 1px solid #9a161a
+      color: #ffffff
+      background-color: #c71c22
+      border-color: #c71c22
+
+    .btn-info
+      background-image: -webkit-linear-gradient(#04519b, #033c73 60%, #02325f)
+      background-image: -o-linear-gradient(#04519b, #033c73 60%, #02325f)
+      background-image: -webkit-gradient(linear, left top, left bottom, from(#04519b), color-stop(60%, #033c73), to(#02325f))
+      background-image: linear-gradient(#04519b, #033c73 60%, #02325f)
+      background-repeat: no-repeat
+      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff04519b', endColorstr='#ff02325f', GradientType=0)
+      -webkit-filter: none
+      filter: none
+      border-bottom: 1px solid #022241
+
+    .glyphicon
+      position: relative
+      top: 1px
+      display: inline-block
+      font-style: normal
+      line-height: 1
+      -webkit-font-smoothing: antialiased
+
+    .glyphicon-arrow-up:before
+      content: "↑"
+
+    .glyphicon-arrow-down:before
+      content: "↓"
+
+    .glyphicon-remove:before
+      content: "x"
+
+    .glyphicon-plus:before
+      content: "+"
+
+    .row
+      margin-left: -15px
+      margin-right: -15px
+
+    .clearfix:before, .clearfix:after, .dl-horizontal dd:before, .dl-horizontal dd:after, .container:before, .container:after, .container-fluid:before, .container-fluid:after, .row:before, .row:after, .form-horizontal .form-group:before, .form-horizontal .form-group:after, .btn-toolbar:before, .btn-toolbar:after, .btn-group-vertical>.btn-group:before, .btn-group-vertical>.btn-group:after, .nav:before, .nav:after, .navbar:before, .navbar:after, .navbar-header:before, .navbar-header:after, .navbar-collapse:before, .navbar-collapse:after, .pager:before, .pager:after, .panel-body:before, .panel-body:after, .modal-header:before, .modal-header:after, .modal-footer:before, .modal-footer:after
+      content: " "
+      display: table
+
+    .clearfix:after, .dl-horizontal dd:after, .container:after, .container-fluid:after, .row:after, .form-horizontal .form-group:after, .btn-toolbar:after, .btn-group-vertical>.btn-group:after, .nav:after, .navbar:after, .navbar-header:after, .navbar-collapse:after, .pager:after, .panel-body:after, .modal-header:after, .modal-footer:after
+      clear: both
