Update Cbio logo to match UI spec
[#163472792]

--- a/src/components/left-nav-panel.sass
+++ b/src/components/left-nav-panel.sass
@@ -3,7 +3,7 @@
 .left-nav-panel
   flex-grow: 0
   flex-shrink: 0
-  flex-basis: $left-nav-panel-width
+  width: $left-nav-panel-width
   display: flex
   flex-direction: column
   background-color: $left-nav-bgcolor
