--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -115,7 +115,7 @@ $main-content-color: $color-nav-cinder-dark3
 // top bar
 //
 $top-bar-height: 29px
-$top-bar-icon-height: 16px
+$top-bar-icon-width: 108px
 $top-bar-icon-bgcolor: $color-nav-cinder-light3
 $top-bar-title-bgcolor: $color-nav-cinder-light2
 $top-bar-title-color: $color-nav-cinder-dark2
