--- a/src/components/top-bar.sass
+++ b/src/components/top-bar.sass
@@ -13,7 +13,7 @@
   .icon-holder
     flex-grow: 0
     flex-shrink: 0
-    flex-basis: $left-nav-panel-width
+    width: $left-nav-panel-width
     display: flex;
     justify-content: center
     align-items: center
@@ -21,7 +21,7 @@
     background-color: $top-bar-icon-bgcolor
 
   .icon
-    height: $top-bar-icon-height
+    width: $top-bar-icon-width
 
   .title-holder
     flex-grow: 1
