Update border radius of sim and data panels to match UI spec
[#163472792]

--- a/src/components/spaces/organisms/organisms-container.sass
+++ b/src/components/spaces/organisms/organisms-container.sass
@@ -25,6 +25,8 @@
     flex-direction: row
     width: 100%
     background-color: $color-salmon-orange-dark2
+    border-bottom-left-radius: $two-up-border-radius
+    border-bottom-right-radius: $two-up-border-radius
 
   .organism-description
     text-align: center
