--- a/src/components/spaces/populations/populations-container.sass
+++ b/src/components/spaces/populations/populations-container.sass
@@ -9,6 +9,8 @@
   position: absolute
   bottom: 0px
   background-color: $color-dark-gold
+  border-bottom-left-radius: $two-up-border-radius
+  border-bottom-right-radius: $two-up-border-radius
 
 .toolbar-row
   display: flex
