--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -226,6 +226,7 @@ $two-up-button-icon-color-active: $color-white
 $two-up-button-icon-height: 18px
 $two-up-button-icon-width: $two-up-button-icon-height
 $two-up-margin: 5px
+$two-up-border-radius: 7px
 $double-two-up-margin: $two-up-margin * 2
 
 $border-color: #FBF8E5
