--- a/src/components/two-up-display.sass
+++ b/src/components/two-up-display.sass
@@ -12,7 +12,7 @@
   flex-direction: column
   background-color: $component-bgcolor
   border: $component-border-width solid white
-  border-radius: $component-border-radius
+  border-radius: $two-up-border-radius
   margin: $double-two-up-margin
   overflow: hidden
 
@@ -24,8 +24,8 @@
     color: $two-up-header-color
     text-align: center
     background-color: $two-up-header-bgcolor
-    border-top-left-radius: $component-border-radius
-    border-top-right-radius: $component-border-radius
+    border-top-left-radius: $two-up-border-radius
+    border-top-right-radius: $two-up-border-radius
 
     &.populations
       background-color: $color-khaki-yellow-dark2
