Update border space around sim headers and controls to match UI spec
[#163472792]

--- a/src/components/spaces/organisms/organisms-container.sass
+++ b/src/components/spaces/organisms/organisms-container.sass
@@ -27,6 +27,9 @@
     background-color: $color-salmon-orange-dark2
     border-bottom-left-radius: $two-up-border-radius
     border-bottom-right-radius: $two-up-border-radius
+    border-style: solid
+    border-color: white
+    border-width: 2px 0 0 0
 
   .organism-description
     text-align: center
