--- a/src/components/spaces/populations/populations-container.sass
+++ b/src/components/spaces/populations/populations-container.sass
@@ -11,6 +11,9 @@
   background-color: $color-dark-gold
   border-bottom-left-radius: $two-up-border-radius
   border-bottom-right-radius: $two-up-border-radius
+  border-style: solid
+  border-color: white
+  border-width: 2px 0 0 0
 
 .toolbar-row
   display: flex
