--- a/src/components/two-up-display.sass
+++ b/src/components/two-up-display.sass
@@ -26,6 +26,7 @@
     background-color: $two-up-header-bgcolor
     border-top-left-radius: $two-up-border-radius
     border-top-right-radius: $two-up-border-radius
+    margin-bottom: 2px
 
     &.populations
       background-color: $color-khaki-yellow-dark2
