--- a/src/components/legend.sass
+++ b/src/components/legend.sass
@@ -4,43 +4,44 @@
   display: grid
   grid-template-columns: auto auto
   grid-template-rows: auto auto
+  font-family: $font-stack
 
-.grid-item
-  display: flex
-  justify-content: center
-  align-items: center
-  text-align: center
-  font-size: $font-size-normal
-  margin: $internal-component-margin
-  margin-top: 0px
+  .grid-item
+    display: flex
+    justify-content: center
+    align-items: center
+    text-align: center
+    font-size: $font-size-normal
+    margin: $internal-component-margin
+    margin-top: 0px
 
-.item-top-left
-  grid-column-start: 1
-  grid-column-end: 2
-  grid-row: 1
+  .item-top-left
+    grid-column-start: 1
+    grid-column-end: 2
+    grid-row: 1
 
-.item-top-right
-  grid-column-start: 2
-  grid-column-end: 3
-  grid-row: 1
+  .item-top-right
+    grid-column-start: 2
+    grid-column-end: 3
+    grid-row: 1
 
-.item-bottom
-  grid-column-start: 1
-  grid-column-end: 3
-  grid-column: 1 / 3
+  .item-bottom
+    grid-column-start: 1
+    grid-column-end: 3
+    grid-column: 1 / 3
 
-.key-circle
-  border-radius: 50%
-  height: $left-nav-legend-circle-size
-  width: $left-nav-legend-circle-size
-  border: 2px solid white
-  margin-right: $component-margin
+  .key-circle
+    border-radius: 50%
+    height: $left-nav-legend-circle-size
+    width: $left-nav-legend-circle-size
+    border: 2px solid white
+    margin-right: $component-margin
 
-.male-color
-	background-color: $left-nav-legend-male-color
+  .male-color
+    background-color: $left-nav-legend-male-color
 
-.female-color
-	background-color: $left-nav-legend-female-color
+  .female-color
+    background-color: $left-nav-legend-female-color
 
-.heterozygote-color
-	background-color: $left-nav-legend-heterozygote-color
+  .heterozygote-color
+    background-color: $left-nav-legend-heterozygote-color
