--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -231,6 +231,8 @@ $collect-button-icon-height: 45px
 // two-up display
 //
 $two-up-header-height: 30px
+$two-up-footer-height: 60px
+$two-up-bgcolor: $color-khaki-yellow-dark4
 $two-up-header-color: $color-white
 $two-up-header-bgcolor: $color-simdata-amber
 $two-up-button-background: $color-simdata-amber-dark1
